--- a/Budget.Web/Views/Category/Index.cshtml
+++ b/Budget.Web/Views/Category/Index.cshtml
@@ -1,24 +1,23 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
-@model IEnumerable<Category>
-<h2>Категории</h2>
-<br/><br />
-     
-     <button class="button"><i class="fas fa-plus">Добавить меню</i></button>
-     <button class="button"><i class="fas fa-stream">Добавить подменю</i></button>
-     <button class="button"><i class="fas fa-edit">Изменить имя</i></button>
-     <button class="button"><i class="fas fa-tras">Добавить подменю</i></button>
-<br/>
-<ul data-role="treeview">
-    @Html.Partial("CategoryPartial", Model)
-</ul>
+﻿@model IEnumerable<Budget.Web.Models.CategoryDto>
 
-    <!--
-    <form method="post" asp-controller="Category" asp-action="AddCategory">
-        <input name="name">
-        <input type="submit" value="Добавить" />
-    </form>
+<p>    
+    <a class="button primary" asp-action="Create">Добавить</a>
+</p>
 
-        -->
+<!--https://github.com/ludo/jquery-treetable-->
+
+
+<table id="tree-table" class="table table-hover table-bordered">
+
+    <tbody>
+
+    @Html.Partial("PartialCategory", Model)
+
+    </tbody>
+
+</table>
+
+
+
+
+
