--- a/Budget.Web/Views/Payment/Index.cshtml
+++ b/Budget.Web/Views/Payment/Index.cshtml
@@ -1,7 +1,47 @@
-﻿
+﻿@model IEnumerable<Budget.Web.Models.Payment>
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
+
+<p>
+    <a class="button primary" asp-action="Create">Новый платёж</a>
+</p>
+<table class="table table-hover table-bordered">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Money)
+            </th>            
+            <th>
+                @Html.DisplayNameFor(model => model.Category)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Date)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Money)
+            </td>           
+            <td>
+                @Html.DisplayFor(modelItem => item.Category.Name)
+            </td>
+            <td>
+                <a class="button primary" asp-action="Edit" asp-route-id="@item.Id">Изменить</a> 
+                <a class="button primary" asp-action="Details" asp-route-id="@item.Id">Подробности</a> 
+                <a class="button primary" asp-action="Delete" asp-route-id="@item.Id">Удалить</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
