--- a/Budget.Web/Views/Shared/_Layout.cshtml
+++ b/Budget.Web/Views/Shared/_Layout.cshtml
@@ -8,11 +8,20 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/AdminLTE.css">
-    <link rel="stylesheet" href="css/_all-skins.min.css">
-    <link rel="stylesheet" href="css/metro-all.min.css">
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/all.min.css">
+    <link rel="stylesheet" href="~/css/AdminLTE.css">
+    <link rel="stylesheet" href="~/css/_all-skins.min.css">
+    <link rel="stylesheet" href="~/css/metro-all.min.css">
+
+
+    <script src="~/js/metro.min.js"></script>
+    <script src="~/js/jquery.min.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/treeTable.js"></script>
+    <script src="~/js/all.min.js"></script>
+    <script src="~/js/sidebar.js"></script>
+
 
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
@@ -51,7 +60,7 @@
                     <div class="user-block shadow-1" data-role="collapse" data-collapsed="true" style="display: none;">
                         <div class="bg-darkCyan fg-white p-2 text-center">
                             <img src="@avatar" class="avatar">
-                            <div class="h4 mb-0">@User.Identity.Name</div>                            
+                            <div class="h4 mb-0">@User.Identity.Name</div>
                         </div>
                         <div class="bg-white d-flex flex-justify-between flex-equal-items p-2 bg-light">
                             <form method="post" asp-controller="Account" asp-action="Logout" style="flex: inherit;">
@@ -77,7 +86,7 @@
                 <ul class="sideview-menu" data-widget="tree">
                     <li class="header">MAIN NAVIGATION</li>
                     <li class="@Html.IsActive(null, "Home")">
-                        <a asp-controller="Home" asp-action="Index" >
+                        <a asp-controller="Home" asp-action="Index">
                             <i class="fa fa-home"></i> <span>Сводка</span>
                         </a>
                     </li>
@@ -87,7 +96,7 @@
                         </a>
                     </li>
                     <li class="@Html.IsActive(null, "Category")">
-                        <a asp-area="" asp-controller="Category" asp-action="Index" >
+                        <a asp-area="" asp-controller="Category" asp-action="Index">
                             <i class="fa fa-list"></i> <span>Категории</span>
                         </a>
                     </li>
@@ -110,13 +119,9 @@
 
     </div>
 
+    @RenderSection("scripts", false)
 
 
-    <script src="js/metro.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/all.min.js"></script>
-    <script src="js/sidebar.js"></script>
 
 </body>
 </html>
