--- a/Budget.Web/Views/Category/Create.cshtml
+++ b/Budget.Web/Views/Category/Create.cshtml
@@ -7,18 +7,19 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label class="control-label">Наименование</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control" asp-items="ViewBag.Type"></select>
-                <span asp-validation-for="Type" class="text-danger"></span>
+                <label class="control-label">Родительская категория</label>
+                <select asp-for="ParentId" class="form-control" asp-items="ViewBag.Parents"></select>
+                <span asp-validation-for="ParentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParentId" class="control-label"></label>
-                <select asp-for="ParentId" class ="form-control" asp-items="ViewBag.ParentId"></select>
+                <label class="control-label">Тип категории</label>
+                <select asp-for="Type" class="form-control" asp-items="ViewBag.Type"></select>
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Создать" class="button primary" />
@@ -30,6 +31,28 @@
 <div>
     <a asp-action="Index">Вернуться</a>
 </div>
+
+<script>
+    $(document).ready(function ($) {
+
+        $.ajax({
+            url: "FillDropdown",
+            type: "Get",
+            data: "",
+            dataType: "json",
+            cache: false,
+            success: function (data) {
+                $('#justAnInputBox').comboTree({
+                    source: data,
+                    isMultiple: false,
+                });
+            },
+            error: function (data) {
+
+            }
+        })
+    });
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
