--- a/Budget.Web/Views/Shared/_Layout.cshtml
+++ b/Budget.Web/Views/Shared/_Layout.cshtml
@@ -9,18 +9,19 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/combo.css">
     <link rel="stylesheet" href="~/css/all.min.css">
     <link rel="stylesheet" href="~/css/AdminLTE.css">
     <link rel="stylesheet" href="~/css/_all-skins.min.css">
-    <link rel="stylesheet" href="~/css/metro-all.min.css">
-
+    <link rel="stylesheet" href="~/css/metro.min.css">
 
     <script src="~/js/metro.min.js"></script>
     <script src="~/js/jquery.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+
     <script src="~/js/treeTable.js"></script>
     <script src="~/js/all.min.js"></script>
     <script src="~/js/sidebar.js"></script>
+    <script src="~/js/comboTreePlugin.js"></script>
 
 
     <!-- Google Font -->
